--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@ body{padding-top: 75px;}
 
 #homeQuote{background: url(../img/bg-quote.jpg) center center;background-size: cover;}
 
+.lista-plano li{padding: 1rem;}
+.lista-plano li + li{
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+}
+
 @media (max-width:767px){
     #homeQuote .display-4{
         font-size: 2.5rem;
